--- a/app/views/breeds/show.html.erb
+++ b/app/views/breeds/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Breeds#show</h1>
-<p>Find me in app/views/breeds/show.html.erb</p>
+<h3 class="title is-4"><%= @breed.name %></h3>
+
+<h4 class="title is-5">Horses of this breed</h4>
+
+<div class="columns is-multiline">
+  <%= render partial: 'horses/horse',
+             collection: @breed.horses,
+             locals: { show_link: true } %>
+</div>
